--- a/index.html
+++ b/index.html
@@ -8,7 +8,132 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
-    /* (CSS dari file kamu tetap utuh di sini) */
+    body {
+      margin: 0;
+      font-family: 'Roboto', sans-serif;
+      background: #f0f2f5;
+      color: #222;
+    }
+    .container {
+      max-width: 960px;
+      margin: auto;
+      padding: 20px;
+    }
+    header {
+      text-align: center;
+      margin-bottom: 10px;
+    }
+    .logo {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 24px;
+      font-weight: bold;
+    }
+    .time-date {
+      font-size: 14px;
+      margin-top: 5px;
+    }
+    .dashboard {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin-top: 20px;
+    }
+    .panel {
+      flex: 1;
+      min-width: 300px;
+      background: #fff;
+      border-radius: 10px;
+      padding: 20px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+    }
+    .panel-title {
+      font-weight: 600;
+      margin-bottom: 15px;
+      font-size: 16px;
+    }
+    .temperature-display {
+      font-size: 24px;
+      margin-bottom: 10px;
+    }
+    .temperature-unit {
+      font-size: 18px;
+    }
+    .temperature-status {
+      font-size: 14px;
+      color: #4caf50;
+    }
+    .devices-grid {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 15px;
+    }
+    .device-card {
+      background: #f9f9f9;
+      border-radius: 8px;
+      padding: 15px;
+      text-align: center;
+      box-shadow: inset 0 0 5px rgba(0,0,0,0.05);
+    }
+    .device-icon i {
+      font-size: 20px;
+      margin-bottom: 5px;
+    }
+    .device-name {
+      font-weight: 500;
+      margin-top: 5px;
+    }
+    .device-status {
+      font-size: 12px;
+      margin: 5px 0;
+    }
+    .toggle-switch {
+      position: relative;
+      display: inline-block;
+      width: 36px;
+      height: 20px;
+    }
+    .toggle-switch input {
+      display: none;
+    }
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0; left: 0;
+      right: 0; bottom: 0;
+      background-color: #ccc;
+      border-radius: 20px;
+      transition: .4s;
+    }
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 14px;
+      width: 14px;
+      left: 3px;
+      bottom: 3px;
+      background-color: white;
+      transition: .4s;
+      border-radius: 50%;
+    }
+    .toggle-switch input:checked + .slider {
+      background-color: #4caf50;
+    }
+    .toggle-switch input:checked + .slider:before {
+      transform: translateX(16px);
+    }
+    .notification {
+      margin-top: 30px;
+      background: #fff3cd;
+      border: 1px solid #ffeeba;
+      padding: 15px;
+      border-radius: 8px;
+    }
+    .notification-title {
+      font-weight: bold;
+    }
+    .notification-message {
+      font-size: 14px;
+    }
   </style>
 </head>
 <body>
@@ -29,9 +154,6 @@
         <div class="temperature-display">
           <div class="temperature-value" id="temperature">24.5<span class="temperature-unit">°C</span></div>
           <div class="temperature-status" id="temperature-status">Comfortable</div>
-        </div>
-        <div class="temperature-graph">
-          <!-- graph svg tetap -->
         </div>
       </div>
 
@@ -77,14 +199,13 @@
             </label>
           </div>
         </div>
-        <!-- panel energy tetap -->
       </div>
     </div>
-  </div>
 
-  <div class="notification" id="notification">
-    <div class="notification-title">System Alert</div>
-    <div class="notification-message" id="notification-message">Temperature is rising above normal levels.</div>
+    <div class="notification" id="notification">
+      <div class="notification-title">System Alert</div>
+      <div class="notification-message" id="notification-message">Temperature is rising above normal levels.</div>
+    </div>
   </div>
 
   <script>
@@ -123,8 +244,6 @@
       const state = e.target.checked ? 'ON' : 'OFF';
       client.publish('esp/relay2', state);
     });
-
-    // fungsi bawaan jam dan suhu tetap seperti yang kamu punya
   </script>
 </body>
 </html>
