--- a/index.html
+++ b/index.html
@@ -21,229 +21,4 @@
     }
     header {
       text-align: center;
-      margin-bottom: 10px;
-    }
-    .logo {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 24px;
-      font-weight: bold;
-    }
-    .time-date {
-      font-size: 14px;
-      margin-top: 5px;
-    }
-    .dashboard {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      margin-top: 20px;
-    }
-    .panel {
-      flex: 1;
-      min-width: 300px;
-      background: #fff;
-      border-radius: 10px;
-      padding: 20px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-    }
-    .panel-title {
-      font-weight: 600;
-      margin-bottom: 15px;
-      font-size: 16px;
-    }
-    .temperature-display {
-      font-size: 24px;
-      margin-bottom: 10px;
-    }
-    .temperature-unit {
-      font-size: 18px;
-    }
-    .temperature-status {
-      font-size: 14px;
-      color: #4caf50;
-    }
-    .devices-grid {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 15px;
-    }
-    .device-card {
-      background: #f9f9f9;
-      border-radius: 8px;
-      padding: 15px;
-      text-align: center;
-      box-shadow: inset 0 0 5px rgba(0,0,0,0.05);
-    }
-    .device-icon i {
-      font-size: 20px;
-      margin-bottom: 5px;
-    }
-    .device-name {
-      font-weight: 500;
-      margin-top: 5px;
-    }
-    .device-status {
-      font-size: 12px;
-      margin: 5px 0;
-    }
-    .toggle-switch {
-      position: relative;
-      display: inline-block;
-      width: 36px;
-      height: 20px;
-    }
-    .toggle-switch input {
-      display: none;
-    }
-    .slider {
-      position: absolute;
-      cursor: pointer;
-      top: 0; left: 0;
-      right: 0; bottom: 0;
-      background-color: #ccc;
-      border-radius: 20px;
-      transition: .4s;
-    }
-    .slider:before {
-      position: absolute;
-      content: "";
-      height: 14px;
-      width: 14px;
-      left: 3px;
-      bottom: 3px;
-      background-color: white;
-      transition: .4s;
-      border-radius: 50%;
-    }
-    .toggle-switch input:checked + .slider {
-      background-color: #4caf50;
-    }
-    .toggle-switch input:checked + .slider:before {
-      transform: translateX(16px);
-    }
-    .notification {
-      margin-top: 30px;
-      background: #fff3cd;
-      border: 1px solid #ffeeba;
-      padding: 15px;
-      border-radius: 8px;
-    }
-    .notification-title {
-      font-weight: bold;
-    }
-    .notification-message {
-      font-size: 14px;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <header>
-      <div class="logo">ATTAMATION</div>
-      <div class="time-date">
-        <div class="time" id="current-time">00:00:00</div>
-        <div class="date" id="current-date">January 1, 2023</div>
-      </div>
-    </header>
-
-    <div class="dashboard">
-      <div class="panel">
-        <div class="panel-title">
-          <i class="fas fa-thermometer-half"></i> ROOM TEMPERATURE
-        </div>
-        <div class="temperature-display">
-          <div class="temperature-value" id="temperature">24.5<span class="temperature-unit">°C</span></div>
-          <div class="temperature-status" id="temperature-status">Comfortable</div>
-        </div>
-      </div>
-
-      <div class="panel">
-        <div class="panel-title">
-          <i class="fas fa-lightbulb"></i> DEVICE CONTROL
-        </div>
-        <div class="devices-grid">
-          <div class="device-card" data-device="relay1">
-            <div class="device-icon"><i class="fas fa-toggle-on"></i></div>
-            <div class="device-name">Relay 1</div>
-            <div class="device-status">OFF</div>
-            <label class="toggle-switch">
-              <input type="checkbox" id="relay1Btn">
-              <span class="slider"></span>
-            </label>
-          </div>
-          <div class="device-card" data-device="relay2">
-            <div class="device-icon"><i class="fas fa-toggle-on"></i></div>
-            <div class="device-name">Relay 2</div>
-            <div class="device-status">OFF</div>
-            <label class="toggle-switch">
-              <input type="checkbox" id="relay2Btn">
-              <span class="slider"></span>
-            </label>
-          </div>
-          <div class="device-card">
-            <div class="device-icon"><i class="fas fa-ban"></i></div>
-            <div class="device-name">Spare 1</div>
-            <div class="device-status">OFF</div>
-            <label class="toggle-switch">
-              <input type="checkbox" disabled>
-              <span class="slider"></span>
-            </label>
-          </div>
-          <div class="device-card">
-            <div class="device-icon"><i class="fas fa-ban"></i></div>
-            <div class="device-name">Spare 2</div>
-            <div class="device-status">OFF</div>
-            <label class="toggle-switch">
-              <input type="checkbox" disabled>
-              <span class="slider"></span>
-            </label>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="notification" id="notification">
-      <div class="notification-title">System Alert</div>
-      <div class="notification-message" id="notification-message">Temperature is rising above normal levels.</div>
-    </div>
-  </div>
-
-  <script>
-    const client = mqtt.connect('wss://3c745a388bec4b4fa3def162b723c4a4.s1.eu.hivemq.cloud:8884/mqtt', {
-      clientId: 'webClient_' + Math.random().toString(16).substr(2, 8),
-      username: 'Atalarik',
-      password: 'Atalarik21',
-      clean: true,
-      connectTimeout: 4000
-    });
-
-    client.on('connect', () => {
-      client.subscribe('esp/status/relay1');
-      client.subscribe('esp/status/relay2');
-      client.publish('esp/get_status', 'REQ');
-    });
-
-    client.on('message', (topic, message) => {
-      const state = message.toString();
-      const relay = topic.includes('relay1') ? 'relay1' : 'relay2';
-      const checkbox = document.getElementById(relay + 'Btn');
-      const card = checkbox.closest('.device-card');
-      const status = card.querySelector('.device-status');
-
-      checkbox.checked = state === 'ON';
-      card.classList.toggle('active', state === 'ON');
-      status.textContent = state;
-    });
-
-    document.getElementById('relay1Btn').addEventListener('change', (e) => {
-      const state = e.target.checked ? 'ON' : 'OFF';
-      client.publish('esp/relay1', state);
-    });
-
-    document.getElementById('relay2Btn').addEventListener('change', (e) => {
-      const state = e.target.checked ? 'ON' : 'OFF';
-      client.publish('esp/relay2', state);
-    });
-  </script>
-</body>
-</html>
+      margin-bott
