--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     body {
       margin: 0;
       font-family: 'Roboto', sans-serif;
-      background: #f0f2f5;
-      color: #222;
+      background: linear-gradient(to bottom right, #1e1e2f, #2b2b45);
+      color: #f5f5f5;
     }
     .container {
       max-width: 960px;
@@ -20,40 +20,33 @@
       padding: 20px;
     }
     header {
-      text-align: center;
-      margin-bottom: 10px;
-      position: relative;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 20px;
+    }
+    .status-indicator {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      font-size: 14px;
+    }
+    .indicator {
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+      background: red;
     }
     .logo {
       font-family: 'Orbitron', sans-serif;
       font-size: 24px;
       font-weight: bold;
-    }
-    .status-indicator {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      display: flex;
-      align-items: center;
-      font-size: 14px;
-      font-weight: 500;
-    }
-    .status-dot {
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-      margin-right: 8px;
-      background-color: #ccc;
-    }
-    .status-online {
-      background-color: #4caf50;
-    }
-    .status-offline {
-      background-color: #f44336;
+      text-align: center;
+      flex-grow: 1;
     }
     .time-date {
       font-size: 14px;
-      margin-top: 5px;
+      text-align: right;
     }
     .dashboard {
       display: flex;
@@ -64,15 +57,16 @@
     .panel {
       flex: 1;
       min-width: 300px;
-      background: #fff;
+      background: #292947;
       border-radius: 10px;
       padding: 20px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
     }
     .panel-title {
       font-weight: 600;
       margin-bottom: 15px;
       font-size: 16px;
+      color: #00ffff;
     }
     .temperature-display {
       font-size: 24px;
@@ -91,15 +85,16 @@
       gap: 15px;
     }
     .device-card {
-      background: #f9f9f9;
+      background: #3b3b5b;
       border-radius: 8px;
       padding: 15px;
       text-align: center;
-      box-shadow: inset 0 0 5px rgba(0,0,0,0.05);
+      box-shadow: inset 0 0 5px rgba(0,0,0,0.1);
     }
     .device-icon i {
       font-size: 20px;
       margin-bottom: 5px;
+      color: #ffd700;
     }
     .device-name {
       font-weight: 500;
@@ -150,12 +145,7 @@
       border: 1px solid #ffeeba;
       padding: 15px;
       border-radius: 8px;
-    }
-    .notification-title {
-      font-weight: bold;
-    }
-    .notification-message {
-      font-size: 14px;
+      color: #000;
     }
   </style>
 </head>
@@ -163,8 +153,8 @@
   <div class="container">
     <header>
       <div class="status-indicator">
-        <div class="status-dot" id="statusDot"></div>
-        <span id="statusText">Offline</span>
+        <div class="indicator" id="status-led"></div>
+        <span id="status-text">Offline</span>
       </div>
       <div class="logo">ATTAMATION</div>
       <div class="time-date">
@@ -236,8 +226,13 @@
   </div>
 
   <script>
-    const statusDot = document.getElementById('statusDot');
-    const statusText = document.getElementById('statusText');
+    function updateDateTime() {
+      const now = new Date();
+      document.getElementById('current-time').textContent = now.toLocaleTimeString();
+      document.getElementById('current-date').textContent = now.toDateString();
+    }
+    setInterval(updateDateTime, 1000);
+    updateDateTime();
 
     const client = mqtt.connect('wss://3c745a388bec4b4fa3def162b723c4a4.s1.eu.hivemq.cloud:8884/mqtt', {
       clientId: 'webClient_' + Math.random().toString(16).substr(2, 8),
@@ -248,19 +243,11 @@
     });
 
     client.on('connect', () => {
-      statusDot.classList.remove('status-offline');
-      statusDot.classList.add('status-online');
-      statusText.textContent = 'Online';
-
+      document.getElementById('status-led').style.background = 'lime';
+      document.getElementById('status-text').textContent = 'Online';
       client.subscribe('esp/status/relay1');
       client.subscribe('esp/status/relay2');
       client.publish('esp/get_status', 'REQ');
-    });
-
-    client.on('close', () => {
-      statusDot.classList.remove('status-online');
-      statusDot.classList.add('status-offline');
-      statusText.textContent = 'Offline';
     });
 
     client.on('message', (topic, message) => {
@@ -271,7 +258,6 @@
       const status = card.querySelector('.device-status');
 
       checkbox.checked = state === 'ON';
-      card.classList.toggle('active', state === 'ON');
       status.textContent = state;
     });
 
