--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Attamation Room Control</title>
   <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
+    /* Semua CSS kamu tetap dipertahankan */
     body {
       margin: 0;
       font-family: 'Roboto', sans-serif;
@@ -234,10 +235,11 @@
     setInterval(updateDateTime, 1000);
     updateDateTime();
 
-    const client = mqtt.connect('wss://3c745a388bec4b4fa3def162b723c4a4.s1.eu.hivemq.cloud:8884/mqtt', {
+    // --- MQTT Connection ---
+    const client = mqtt.connect('wss://9fa472bc0c754eb488098ea8f4bb27f8.s1.eu.hivemq.cloud', {
       clientId: 'webClient_' + Math.random().toString(16).substr(2, 8),
-      username: 'Atalarik',
-      password: 'Atalarik21',
+      username: 'Attamationhtml',
+      password: 'Attamationhtml21',
       clean: true,
       connectTimeout: 4000
     });
