--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
-    /* Semua CSS kamu tetap dipertahankan */
     body {
       margin: 0;
       font-family: 'Roboto', sans-serif;
@@ -150,6 +149,7 @@
     }
   </style>
 </head>
+
 <body>
   <div class="container">
     <header>
@@ -236,7 +236,7 @@
     updateDateTime();
 
     // --- MQTT Connection ---
-    const client = mqtt.connect('wss://9fa472bc0c754eb488098ea8f4bb27f8.s1.eu.hivemq.cloud', {
+    const client = mqtt.connect('wss://9fa472bc0c754eb488098ea8f4bb27f8.s1.eu.hivemq.cloud:8884/mqtt', {
       clientId: 'webClient_' + Math.random().toString(16).substr(2, 8),
       username: 'Attamationhtml',
       password: 'Attamationhtml21',
@@ -245,6 +245,7 @@
     });
 
     client.on('connect', () => {
+      console.log('Connected to MQTT Broker');
       document.getElementById('status-led').style.background = 'lime';
       document.getElementById('status-text').textContent = 'Online';
       client.subscribe('esp/status/relay1');
@@ -254,13 +255,32 @@
 
     client.on('message', (topic, message) => {
       const state = message.toString();
-      const relay = topic.includes('relay1') ? 'relay1' : 'relay2';
-      const checkbox = document.getElementById(relay + 'Btn');
-      const card = checkbox.closest('.device-card');
-      const status = card.querySelector('.device-status');
+      let relay = '';
+      if (topic.includes('relay1')) {
+        relay = 'relay1';
+      } else if (topic.includes('relay2')) {
+        relay = 'relay2';
+      }
+      if (relay) {
+        const checkbox = document.getElementById(relay + 'Btn');
+        const card = checkbox.closest('.device-card');
+        const status = card.querySelector('.device-status');
 
-      checkbox.checked = state === 'ON';
-      status.textContent = state;
+        checkbox.checked = state === 'ON';
+        status.textContent = state;
+      }
+    });
+
+    client.on('error', (error) => {
+      console.error('Connection error:', error);
+      document.getElementById('status-led').style.background = 'red';
+      document.getElementById('status-text').textContent = 'Offline';
+    });
+
+    client.on('close', () => {
+      console.log('Disconnected');
+      document.getElementById('status-led').style.background = 'red';
+      document.getElementById('status-text').textContent = 'Offline';
     });
 
     document.getElementById('relay1Btn').addEventListener('change', (e) => {
