--- a/index.html
+++ b/index.html
@@ -149,7 +149,6 @@
     }
   </style>
 </head>
-
 <body>
   <div class="container">
     <header>
@@ -236,7 +235,7 @@
     updateDateTime();
 
     // --- MQTT Connection ---
-    const client = mqtt.connect('wss://9fa472bc0c754eb488098ea8f4bb27f8.s1.eu.hivemq.cloud:8884/mqtt', {
+    const client = mqtt.connect('wss://9fa472bc0c754eb488098ea8f4bb27f8.s1.eu.hivemq.cloud', {
       clientId: 'webClient_' + Math.random().toString(16).substr(2, 8),
       username: 'Attamationhtml',
       password: 'Attamationhtml21',
@@ -245,7 +244,6 @@
     });
 
     client.on('connect', () => {
-      console.log('Connected to MQTT Broker');
       document.getElementById('status-led').style.background = 'lime';
       document.getElementById('status-text').textContent = 'Online';
       client.subscribe('esp/status/relay1');
@@ -255,32 +253,13 @@
 
     client.on('message', (topic, message) => {
       const state = message.toString();
-      let relay = '';
-      if (topic.includes('relay1')) {
-        relay = 'relay1';
-      } else if (topic.includes('relay2')) {
-        relay = 'relay2';
-      }
-      if (relay) {
-        const checkbox = document.getElementById(relay + 'Btn');
-        const card = checkbox.closest('.device-card');
-        const status = card.querySelector('.device-status');
+      const relay = topic.includes('relay1') ? 'relay1' : 'relay2';
+      const checkbox = document.getElementById(relay + 'Btn');
+      const card = checkbox.closest('.device-card');
+      const status = card.querySelector('.device-status');
 
-        checkbox.checked = state === 'ON';
-        status.textContent = state;
-      }
-    });
-
-    client.on('error', (error) => {
-      console.error('Connection error:', error);
-      document.getElementById('status-led').style.background = 'red';
-      document.getElementById('status-text').textContent = 'Offline';
-    });
-
-    client.on('close', () => {
-      console.log('Disconnected');
-      document.getElementById('status-led').style.background = 'red';
-      document.getElementById('status-text').textContent = 'Offline';
+      checkbox.checked = state === 'OFF';  // Perbaiki logika di sini
+      status.textContent = state === 'OFF' ? 'OFF' : 'ON'; // Sesuaikan status dengan kondisi yang diterima
     });
 
     document.getElementById('relay1Btn').addEventListener('change', (e) => {
