--- a/index.html
+++ b/index.html
@@ -68,17 +68,6 @@
       font-size: 16px;
       color: #00ffff;
     }
-    .temperature-display {
-      font-size: 24px;
-      margin-bottom: 10px;
-    }
-    .temperature-unit {
-      font-size: 18px;
-    }
-    .temperature-status {
-      font-size: 14px;
-      color: #4caf50;
-    }
     .devices-grid {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
@@ -139,14 +128,6 @@
     .toggle-switch input:checked + .slider:before {
       transform: translateX(16px);
     }
-    .notification {
-      margin-top: 30px;
-      background: #fff3cd;
-      border: 1px solid #ffeeba;
-      padding: 15px;
-      border-radius: 8px;
-      color: #000;
-    }
   </style>
 </head>
 <body>
@@ -166,23 +147,13 @@
     <div class="dashboard">
       <div class="panel">
         <div class="panel-title">
-          <i class="fas fa-thermometer-half"></i> ROOM TEMPERATURE
-        </div>
-        <div class="temperature-display">
-          <div class="temperature-value" id="temperature">24.5<span class="temperature-unit">°C</span></div>
-          <div class="temperature-status" id="temperature-status">Comfortable</div>
-        </div>
-      </div>
-
-      <div class="panel">
-        <div class="panel-title">
           <i class="fas fa-lightbulb"></i> DEVICE CONTROL
         </div>
         <div class="devices-grid">
           <div class="device-card" data-device="relay1">
             <div class="device-icon"><i class="fas fa-toggle-on"></i></div>
             <div class="device-name">Relay 1</div>
-            <div class="device-status">OFF</div>
+            <div class="device-status" id="relay1-status">OFF</div>
             <label class="toggle-switch">
               <input type="checkbox" id="relay1Btn">
               <span class="slider"></span>
@@ -191,37 +162,14 @@
           <div class="device-card" data-device="relay2">
             <div class="device-icon"><i class="fas fa-toggle-on"></i></div>
             <div class="device-name">Relay 2</div>
-            <div class="device-status">OFF</div>
+            <div class="device-status" id="relay2-status">OFF</div>
             <label class="toggle-switch">
               <input type="checkbox" id="relay2Btn">
               <span class="slider"></span>
             </label>
           </div>
-          <div class="device-card">
-            <div class="device-icon"><i class="fas fa-ban"></i></div>
-            <div class="device-name">Spare 1</div>
-            <div class="device-status">OFF</div>
-            <label class="toggle-switch">
-              <input type="checkbox" disabled>
-              <span class="slider"></span>
-            </label>
-          </div>
-          <div class="device-card">
-            <div class="device-icon"><i class="fas fa-ban"></i></div>
-            <div class="device-name">Spare 2</div>
-            <div class="device-status">OFF</div>
-            <label class="toggle-switch">
-              <input type="checkbox" disabled>
-              <span class="slider"></span>
-            </label>
-          </div>
         </div>
       </div>
-    </div>
-
-    <div class="notification" id="notification">
-      <div class="notification-title">System Alert</div>
-      <div class="notification-message" id="notification-message">Temperature is rising above normal levels.</div>
     </div>
   </div>
 
@@ -234,7 +182,7 @@
     setInterval(updateDateTime, 1000);
     updateDateTime();
 
-    // --- MQTT Connection ---
+    // MQTT Connection Setup
     const client = mqtt.connect('wss://9fa472bc0c754eb488098ea8f4bb27f8.s1.eu.hivemq.cloud', {
       clientId: 'webClient_' + Math.random().toString(16).substr(2, 8),
       username: 'Attamationhtml',
@@ -255,18 +203,25 @@
       const state = message.toString();
       const relay = topic.includes('relay1') ? 'relay1' : 'relay2';
       const checkbox = document.getElementById(relay + 'Btn');
-      const card = checkbox.closest('.device-card');
-      const status = card.querySelector('.device-status');
-
-      checkbox.checked = state === 'OFF';  // Perbaiki logika di sini
-      status.textContent = state === 'OFF' ? 'OFF' : 'ON'; // Sesuaikan status dengan kondisi yang diterima
+      const status = document.getElementById(relay + '-status');
+      
+      // Mengatur checkbox dan status sesuai dengan pesan yang diterima
+      if (state === 'ON') {
+        checkbox.checked = true;
+        status.textContent = 'ON';
+      } else {
+        checkbox.checked = false;
+        status.textContent = 'OFF';
+      }
     });
 
+    // Kontrol Relay 1
     document.getElementById('relay1Btn').addEventListener('change', (e) => {
       const state = e.target.checked ? 'ON' : 'OFF';
       client.publish('esp/relay1', state);
     });
 
+    // Kontrol Relay 2
     document.getElementById('relay2Btn').addEventListener('change', (e) => {
       const state = e.target.checked ? 'ON' : 'OFF';
       client.publish('esp/relay2', state);
