--- a/index.html
+++ b/index.html
@@ -68,6 +68,17 @@
       font-size: 16px;
       color: #00ffff;
     }
+    .temperature-display {
+      font-size: 24px;
+      margin-bottom: 10px;
+    }
+    .temperature-unit {
+      font-size: 18px;
+    }
+    .temperature-status {
+      font-size: 14px;
+      color: #4caf50;
+    }
     .devices-grid {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
@@ -128,8 +139,17 @@
     .toggle-switch input:checked + .slider:before {
       transform: translateX(16px);
     }
+    .notification {
+      margin-top: 30px;
+      background: #fff3cd;
+      border: 1px solid #ffeeba;
+      padding: 15px;
+      border-radius: 8px;
+      color: #000;
+    }
   </style>
 </head>
+
 <body>
   <div class="container">
     <header>
@@ -147,13 +167,23 @@
     <div class="dashboard">
       <div class="panel">
         <div class="panel-title">
+          <i class="fas fa-thermometer-half"></i> ROOM TEMPERATURE
+        </div>
+        <div class="temperature-display">
+          <div class="temperature-value" id="temperature">24.5<span class="temperature-unit">°C</span></div>
+          <div class="temperature-status" id="temperature-status">Comfortable</div>
+        </div>
+      </div>
+
+      <div class="panel">
+        <div class="panel-title">
           <i class="fas fa-lightbulb"></i> DEVICE CONTROL
         </div>
         <div class="devices-grid">
           <div class="device-card" data-device="relay1">
             <div class="device-icon"><i class="fas fa-toggle-on"></i></div>
             <div class="device-name">Relay 1</div>
-            <div class="device-status" id="relay1-status">OFF</div>
+            <div class="device-status">OFF</div>
             <label class="toggle-switch">
               <input type="checkbox" id="relay1Btn">
               <span class="slider"></span>
@@ -162,14 +192,37 @@
           <div class="device-card" data-device="relay2">
             <div class="device-icon"><i class="fas fa-toggle-on"></i></div>
             <div class="device-name">Relay 2</div>
-            <div class="device-status" id="relay2-status">OFF</div>
+            <div class="device-status">OFF</div>
             <label class="toggle-switch">
               <input type="checkbox" id="relay2Btn">
               <span class="slider"></span>
             </label>
           </div>
+          <div class="device-card">
+            <div class="device-icon"><i class="fas fa-ban"></i></div>
+            <div class="device-name">Spare 1</div>
+            <div class="device-status">OFF</div>
+            <label class="toggle-switch">
+              <input type="checkbox" disabled>
+              <span class="slider"></span>
+            </label>
+          </div>
+          <div class="device-card">
+            <div class="device-icon"><i class="fas fa-ban"></i></div>
+            <div class="device-name">Spare 2</div>
+            <div class="device-status">OFF</div>
+            <label class="toggle-switch">
+              <input type="checkbox" disabled>
+              <span class="slider"></span>
+            </label>
+          </div>
         </div>
       </div>
+    </div>
+
+    <div class="notification" id="notification">
+      <div class="notification-title">System Alert</div>
+      <div class="notification-message" id="notification-message">Temperature is rising above normal levels.</div>
     </div>
   </div>
 
@@ -182,8 +235,8 @@
     setInterval(updateDateTime, 1000);
     updateDateTime();
 
-    // MQTT Connection Setup
-    const client = mqtt.connect('wss://9fa472bc0c754eb488098ea8f4bb27f8.s1.eu.hivemq.cloud', {
+    // --- MQTT Connection ---
+    const client = mqtt.connect('wss://9fa472bc0c754eb488098ea8f4bb27f8.s1.eu.hivemq.cloud:8884/mqtt', {
       clientId: 'webClient_' + Math.random().toString(16).substr(2, 8),
       username: 'Attamationhtml',
       password: 'Attamationhtml21',
@@ -192,6 +245,7 @@
     });
 
     client.on('connect', () => {
+      console.log('Connected to MQTT Broker');
       document.getElementById('status-led').style.background = 'lime';
       document.getElementById('status-text').textContent = 'Online';
       client.subscribe('esp/status/relay1');
@@ -201,27 +255,39 @@
 
     client.on('message', (topic, message) => {
       const state = message.toString();
-      const relay = topic.includes('relay1') ? 'relay1' : 'relay2';
-      const checkbox = document.getElementById(relay + 'Btn');
-      const status = document.getElementById(relay + '-status');
-      
-      // Mengatur checkbox dan status sesuai dengan pesan yang diterima
-      if (state === 'ON') {
-        checkbox.checked = true;
-        status.textContent = 'ON';
-      } else {
-        checkbox.checked = false;
-        status.textContent = 'OFF';
+      let relay = '';
+      if (topic.includes('relay1')) {
+        relay = 'relay1';
+      } else if (topic.includes('relay2')) {
+        relay = 'relay2';
+      }
+      if (relay) {
+        const checkbox = document.getElementById(relay + 'Btn');
+        const card = checkbox.closest('.device-card');
+        const status = card.querySelector('.device-status');
+
+        checkbox.checked = state === 'ON';
+        status.textContent = state;
       }
     });
 
-    // Kontrol Relay 1
+    client.on('error', (error) => {
+      console.error('Connection error:', error);
+      document.getElementById('status-led').style.background = 'red';
+      document.getElementById('status-text').textContent = 'Offline';
+    });
+
+    client.on('close', () => {
+      console.log('Disconnected');
+      document.getElementById('status-led').style.background = 'red';
+      document.getElementById('status-text').textContent = 'Offline';
+    });
+
     document.getElementById('relay1Btn').addEventListener('change', (e) => {
       const state = e.target.checked ? 'ON' : 'OFF';
       client.publish('esp/relay1', state);
     });
 
-    // Kontrol Relay 2
     document.getElementById('relay2Btn').addEventListener('change', (e) => {
       const state = e.target.checked ? 'ON' : 'OFF';
       client.publish('esp/relay2', state);
