--- a/index.html
+++ b/index.html
@@ -227,13 +227,22 @@
   </div>
 
   <script>
-    function updateDateTime() {
-      const now = new Date();
-      document.getElementById('current-time').textContent = now.toLocaleTimeString();
-      document.getElementById('current-date').textContent = now.toDateString();
+    // Variabel untuk melacak status koneksi dan timer
+    let lastResponseTime = Date.now();
+    let statusTimeout;
+
+    function updateStatus() {
+      const currentTime = Date.now();
+      const timeDiff = currentTime - lastResponseTime;
+
+      if (timeDiff > 5000) {  // Jika tidak ada respons lebih dari 5 detik
+        document.getElementById('status-led').style.background = 'red';
+        document.getElementById('status-text').textContent = 'Offline';
+      }
     }
-    setInterval(updateDateTime, 1000);
-    updateDateTime();
+
+    // Set interval untuk memeriksa status setiap detik
+    setInterval(updateStatus, 1000);
 
     // --- MQTT Connection ---
     const client = mqtt.connect('wss://9fa472bc0c754eb488098ea8f4bb27f8.s1.eu.hivemq.cloud:8884/mqtt', {
@@ -251,6 +260,7 @@
       client.subscribe('esp/status/relay1');
       client.subscribe('esp/status/relay2');
       client.publish('esp/get_status', 'REQ');
+      lastResponseTime = Date.now();  // Reset timer saat pertama kali terhubung
     });
 
     client.on('message', (topic, message) => {
@@ -268,6 +278,7 @@
 
         checkbox.checked = state === 'ON';
         status.textContent = state;
+        lastResponseTime = Date.now();  // Reset timer setiap kali menerima status baru
       }
     });
 
@@ -277,7 +288,6 @@
       document.getElementById('status-text').textContent = 'Offline';
     });
 
-    // Event untuk deteksi koneksi terputus
     client.on('close', () => {
       console.log('Disconnected');
       document.getElementById('status-led').style.background = 'red';
@@ -294,11 +304,13 @@
     document.getElementById('relay1Btn').addEventListener('change', (e) => {
       const state = e.target.checked ? 'ON' : 'OFF';
       client.publish('esp/relay1', state);
+      lastResponseTime = Date.now();  // Reset timer saat tombol ditekan
     });
 
     document.getElementById('relay2Btn').addEventListener('change', (e) => {
       const state = e.target.checked ? 'ON' : 'OFF';
       client.publish('esp/relay2', state);
+      lastResponseTime = Date.now();  // Reset timer saat tombol ditekan
     });
   </script>
 </body>
