--- a/index.html
+++ b/index.html
@@ -227,22 +227,13 @@
   </div>
 
   <script>
-    // Variabel untuk melacak status koneksi dan timer
-    let lastResponseTime = Date.now();
-    let statusTimeout;
-
-    function updateStatus() {
-      const currentTime = Date.now();
-      const timeDiff = currentTime - lastResponseTime;
-
-      if (timeDiff > 5000) {  // Jika tidak ada respons lebih dari 5 detik
-        document.getElementById('status-led').style.background = 'red';
-        document.getElementById('status-text').textContent = 'Offline';
-      }
+    function updateDateTime() {
+      const now = new Date();
+      document.getElementById('current-time').textContent = now.toLocaleTimeString();
+      document.getElementById('current-date').textContent = now.toDateString();
     }
-
-    // Set interval untuk memeriksa status setiap detik
-    setInterval(updateStatus, 1000);
+    setInterval(updateDateTime, 1000);
+    updateDateTime();
 
     // --- MQTT Connection ---
     const client = mqtt.connect('wss://9fa472bc0c754eb488098ea8f4bb27f8.s1.eu.hivemq.cloud:8884/mqtt', {
@@ -260,7 +251,6 @@
       client.subscribe('esp/status/relay1');
       client.subscribe('esp/status/relay2');
       client.publish('esp/get_status', 'REQ');
-      lastResponseTime = Date.now();  // Reset timer saat pertama kali terhubung
     });
 
     client.on('message', (topic, message) => {
@@ -278,7 +268,6 @@
 
         checkbox.checked = state === 'ON';
         status.textContent = state;
-        lastResponseTime = Date.now();  // Reset timer setiap kali menerima status baru
       }
     });
 
@@ -294,23 +283,14 @@
       document.getElementById('status-text').textContent = 'Offline';
     });
 
-    // Deteksi offline dan hubungkan ulang
-    client.on('offline', () => {
-      console.log('MQTT client offline');
-      document.getElementById('status-led').style.background = 'red';
-      document.getElementById('status-text').textContent = 'Offline';
-    });
-
     document.getElementById('relay1Btn').addEventListener('change', (e) => {
       const state = e.target.checked ? 'ON' : 'OFF';
       client.publish('esp/relay1', state);
-      lastResponseTime = Date.now();  // Reset timer saat tombol ditekan
     });
 
     document.getElementById('relay2Btn').addEventListener('change', (e) => {
       const state = e.target.checked ? 'ON' : 'OFF';
       client.publish('esp/relay2', state);
-      lastResponseTime = Date.now();  // Reset timer saat tombol ditekan
     });
   </script>
 </body>
